<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">


    <TextView
        android:id="@+id/textView5"
        style="@style/Integral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email_layout"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="40dp"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_conf_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_conf_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_green"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/arrow_right"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_conf_layout" />

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="55dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:background="@drawable/circle_bg"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical">-->
<!--        <ImageView-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:src="@drawable/icon1"-->
<!--            android:scaleType="fitCenter"-->
<!--            app:tint="@color/white"-->
<!--            />-->





<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="55dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:background="@drawable/circle_bg"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:layout_marginLeft="25dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintStart_toEndOf="@+id/linearLayout">-->
<!--        <ImageView-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:src="@drawable/icon2"-->
<!--            android:scaleType="fitCenter"-->
<!--            app:tint="@color/white"-->
<!--            />-->


<!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>